--- a/frontend/src/login.css
+++ b/frontend/src/login.css
@@ -29,5 +29,16 @@
     margin: 0.5rem 0;
     border-radius: 8px;
     outline: none;
+    text-decoration: none;
     cursor: pointer;
+    width: 1in;
+    margin-top: 0.5in;
+    margin: auto;
+    display: block;
+    /* margin-top: 1in; */
+}
+.login{
+    margin-left: 5.73in;
+    margin-top: 1in;
+    padding: 0.5in;
 }
